@@ -178,19 +178,6 @@ Ice::Communicator::~Communicator()
 	Warning out(_instance->logger());
 	out << "Ice::Communicator::destroy() has not been called";
     }
-
-    if(_instance->__getRef() > 1)
-    {
-	PropertiesPtr properties = _instance->properties();
-	if(properties->getPropertyAsIntWithDefault("Ice.Warn.Leaks", 1) > 0)
-	{
-	    Warning warn(_instance->logger());
-	    warn <<
-		"The communicator is not the last Ice object that is\n"
-		"deleted. (You can disable this warning by setting the\n"
-		"property `Ice.Warn.Leaks' to 0.)";
-	}
-    }
 }
 
 void
