@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Wed Feb  8 17:24:02 2006
+// Generated by makeprops.py from file `../config/PropertyNames.def', Tue Mar  7 15:44:07 2006
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -73,7 +73,6 @@ namespace IceInternal
             @"^Ice\.Warn\.Datagrams$",
             @"^Ice\.Warn\.Dispatch$",
             @"^Ice\.Warn\.Endpoints$",
-            @"^Ice\.Warn\.Leaks$",
             null
         };
 
